updating wasp workflow

--- a/.github/workflows/wasp.yaml
+++ b/.github/workflows/wasp.yaml
@@ -33,11 +33,10 @@ jobs:
         name: "Build wasp"
 
       - run: |
-          cd wasp
           rm -rf db
           rm -rf server
           rm -rf web-app
-          cp -r .wasp/* .
+          cp -r wasp/.wasp/out/*
         name: "Updating generated code"
 
       - if: ${{ !(github.event_name == 'push' && github.ref == 'refs/heads/master') }}
